# pikuma2D

./: .gitignore  2DGameEngine.sln  2dgameengine.sublime-project  2dgameengine.sublime-workspace  Makefile  README  README.MD  meson.build  pikuma2D.sublime-project
2DGameEngine/: 2DGameEngine.vcxproj  2DGameEngine.vcxproj.filters
2DGameEngine/src/: Main.cpp  MainTest.cpp
2DGameEngine/src/Components/: TransformComponent.h
2DGameEngine/src/ECS/: ECS.cpp
2DGameEngine/src/Game/: Game.cpp  Game.h
2DGameEngine/src/Logger/: Logger.cpp  Logger.h
2DGameEngine/src/Systems/: MovementSystem.h
include/Components/: RigidBodyComponent.h  SpriteComponent.h  TransformComponent.h
include/ECS/: ECS.h
include/Game/: Game.h
include/Systems/: MovementSystem.h  RenderSystem.h
include/sol/: config.hpp  forward.hpp  sol.hpp
src/: ECS.cpp  Game.cpp  Game.h  Logger.cpp  Logger.h  Main.cpp
src/ECS/: ECS.h
src/Game/: Game.cpp
src/Systems/: MovementSystem.h
subprojects/: imgui.wrap  sdl2_mixer.wrap
